# DRMSimulationModel

./: CMakeLists.txt  README.md
.github/workflows/: cmake_macos.yml  cmake_ubuntu.yml  cmake_windows.yml  matrix_ubuntuMacWindows.yml
demo/: CMakeLists.txt  main.cpp
demo/PaperResults/cantilever/Results/: deformed DRM cantilever cantilever.ply  deformed DRM cantilever cantilever_displacements.eigenBin
demo/PaperResults/cantilever/SimulationJob/: DRMSettings.json  SimulationJob.json  cantilever.ply
demo/PaperResults/pentashell_fixed/SimulationJob/: DRMSettings.json  SimulationJob.json  pentashell.ply
demo/PaperResults/pentashell_pinned/SimulationJob/: DRMSettings.json  SimulationJob.json  pentashell.ply
demo/PaperResults/roof/SimulationJob/: SimulationJob.json  roof.ply
demo/PaperResults/torus/Results/: deformed DRM torus .ply  deformed DRM torus _displacements.eigenBin
demo/PaperResults/torus/SimulationJob/: SimulationJob.json  edited_mod1flat.ply
demo/PaperResults/tripod/SimulationJob/: DRMSettings.json  SimulationJob.json  tripod.ply
include/: beam.hpp  drmsimulationmodel.hpp  edgemesh.hpp  mesh.hpp  polymesh.hpp  simulation_structs.hpp  simulationhistoryplotter.hpp  simulationmesh.hpp  utilities.hpp
src/: CMakeLists.txt  drmsimulationmodel.cpp  edgemesh.cpp  simulationmesh.cpp  utilities.cpp
tests/: CMakeLists.txt  tests.cpp
